# actix-seaorm-mysql

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/handlers/: error_handler.rs
api/src/routes/: mod.rs  user_routes.rs
entity/: Cargo.toml
entity/src/: lib.rs  paginated_model.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
src/: config.rs  main.rs
