workspace = { members = ["api", "entity", "service", "migration"] }
[package]
name = "actix-seaorm-mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-api = { path = "api" }
dotenv = "0.15.0"
lazy_static = "1.4.0"
