[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = { path = "../service" }
migration = { path = "../migration" }
entity = { path = "../entity" }
actix-web = "4.5.1"
jsonwebtoken = "9.2.0"
actix-cors = "0.7.0"
chrono = "0.4.9"
env_logger = "0.11.3"
log = "0.4.8"
serde = "1.0.9"
serde_json = "1.0.114"
derive_more = "0.99.9"
