[package]
name = "actix-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
futures = "0.3.30"


[dependencies.sea-orm]
version = "^0.12.0"
features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"]
